--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,20 @@ plugins {
 apply plugin: 'kotlin-kapt'
 
 android {
+    signingConfigs {
+        debug {
+            storeFile file('G:\\Sigmond Morgan\\CIFDAQ Wallet Keystore\\cifdaq_wallet.jks')
+            storePassword 'Microblocklabs@123'
+            keyPassword 'Microblocklabs@123'
+            keyAlias 'CIFDAQ'
+        }
+        release {
+            storeFile file('G:\\Sigmond Morgan\\CIFDAQ Wallet Keystore\\cifdaq_wallet.jks')
+            keyAlias 'CIFDAQ'
+            storePassword 'Microblocklabs@123'
+            keyPassword 'Microblocklabs@123'
+        }
+    }
     namespace 'com.microblocklabs.mpc'
     compileSdk 33
 
@@ -15,7 +29,7 @@ android {
         minSdk 26
         targetSdk 33
         versionCode 1
-        versionName "1.0"
+        versionName "2.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -24,11 +38,15 @@ android {
         debug {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+//            buildConfigField "String", "BASE_URL_DEV", '"'+BASE_URL_DEV+'"'
+//            buildConfigField "String", "BASE_URL_PRODUCTION", '"'+BASE_URL_PRODUCTION+'"'
         }
 
         release {
-            minifyEnabled true
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+//            buildConfigField "String", "BASE_URL_DEV", '"'+BASE_URL_DEV+'"'
+//            buildConfigField "String", "BASE_URL_PRODUCTION", '"'+BASE_URL_PRODUCTION+'"'
         }
 
     }
@@ -98,7 +116,7 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxjava:2.2.21'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
 
-    //  dialog library
+    //  loader library
     implementation 'com.github.d-max:spots-dialog:0.7@aar'
 
     //  country code picker library
@@ -115,6 +133,9 @@ dependencies {
     implementation 'com.journeyapps:zxing-android-embedded:4.2.0'
     //  Glass morphism library
     implementation 'jp.wasabeef:blurry:4.0.1'
+
+    implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'
+//    implementation 'com.github.mhiew:android-pdf-viewer:3.2.0-beta.1'
 
     
 }
