--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,33 +14,31 @@
         android:roundIcon="@mipmap/app_icon_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MPC"
-        tools:targetApi="31">
+        tools:targetApi="33">
         <activity
-            android:name=".activity.ChangePasswordActivity"
+            android:name=".activity.SplashScreenActivity"
             android:exported="true" >
-<!--             <intent-filter>-->
-<!--             <action android:name="android.intent.action.MAIN" />-->
-<!--             <category android:name="android.intent.category.LAUNCHER" />-->
-<!--             </intent-filter>-->
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
-            android:name=".activity.SkipToHomeActivity"
+            android:name=".activity.TransactionDetailsActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:exported="true"
+            android:theme="@style/Theme.MPC.Fullscreen" />
+        <activity
+            android:name=".activity.AccountRecoveryActivity"
             android:exported="false" />
         <activity
-            android:name=".activity.CongratulationActivity"
-            android:exported="true">
-        </activity>
+            android:name=".activity.DeleteWalletActivity"
+            android:exported="false" />
         <activity
-            android:name=".activity.PhraseRecoveryActivity"
-            android:exported="true">
-
-<!--             <intent-filter>-->
-<!--             <action android:name="android.intent.action.MAIN" />-->
-<!--             <category android:name="android.intent.category.LAUNCHER" />-->
-<!--             </intent-filter>-->
-        </activity>
+            android:name=".activity.TransparentLockScreenActivity"
+            android:exported="false" />
         <activity
-            android:name=".activity.OTPVerificationActivity"
+            android:name=".activity.ChangePasswordActivity"
             android:exported="true">
 
             <!-- <intent-filter> -->
@@ -49,21 +47,53 @@
             <!-- </intent-filter> -->
         </activity>
         <activity
-            android:name=".activity.SplashActivity"
+            android:name=".activity.SkipToHomeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.CongratulationActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
         </activity>
+        <activity
+            android:name=".activity.PhraseRecoveryActivity"
+            android:exported="true">
+
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
+        </activity>
+        <activity
+            android:name=".activity.OTPVerificationActivity"
+            android:exported="true"
+            android:windowSoftInputMode="adjustResize|stateAlwaysHidden">
+
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
+        </activity>
+<!--        <activity-->
+<!--            android:name=".activity.SplashActivity"-->
+<!--            android:exported="true">-->
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
+<!--        </activity>-->
         <activity
             android:name=".activity.HomeScreenActivity"
             android:exported="true">
 
-<!--             <intent-filter>-->
-<!--             <action android:name="android.intent.action.MAIN" />-->
-<!--             <category android:name="android.intent.category.LAUNCHER" />-->
-<!--             </intent-filter>-->
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
         </activity>
         <activity
             android:name="com.journeyapps.barcodescanner.CaptureActivity"
@@ -78,8 +108,7 @@
         <activity
             android:name=".activity.CreateWalletActivity"
             android:exported="true"
-            android:windowSoftInputMode="adjustResize|stateAlwaysHidden">
-        </activity>
+            android:windowSoftInputMode="adjustResize|stateAlwaysHidden" />
         <activity
             android:name=".activity.BaseActivity"
             android:exported="false" />
